# copybara:strip_begin
# Copybara moves this file to repository root since we need a BUILD file there.
# copybara:strip_end

load("@rules_python//python:pip.bzl", "compile_pip_requirements")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
    tags = ["notap"],
)
